trying price nnot 1
